updated footer text to include link to github

--- a/index.mustache
+++ b/index.mustache
@@ -25,7 +25,7 @@
 </tr>
 {{/showtimes}}
 </table>
-		<footer>Leffalistan sulle duunas <a href="http://viiksipojat.fi">Viiksipojat</a>. Palautteen ja rakkaudentunnustukset voit lähettää tolle <a href="mailto:mikkotron@viiksipojat.fi">Mikolle</a>.</footer>
+		<footer>Leffalistan sulle duunas <a href="http://viiksipojat.fi">Viiksipojat</a>. Palautteen ja rakkaudentunnustukset voit lähettää tolle <a href="mailto:mikkotron@viiksipojat.fi">Mikolle</a>. Uteliaimmat voivat tyydyttää tiedonhimoaan projektin <a href="http://github.com/mjleino/hkileffat/">Github-sivulla</a>.</footer>
 	</section>
 </body>
 </html>
