--- a/index.mustache
+++ b/index.mustache
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Leffat"> <!-- http://stackoverflow.com/a/11190465/470138 -->
 	<title>Helsingin leffat</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
